--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,17 +13,18 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-25 Sat 19:52]
+#+CAPTION: Clock summary at [2017-02-25 Sat 21:53]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *17:31* |       |       | 100.0 |
+| *Total time*                                                                | *18:27* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 17:31   |       |       | 100.0 |
-| Active                                                                      |         | 17:31 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   2.3 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   2.9 |
-| STARTED Implement the database model using Northwind                        |         |       | 16:37 |  94.9 |
+| Stories                                                                     | 18:27   |       |       | 100.0 |
+| Active                                                                      |         | 18:27 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   2.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   2.7 |
+| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   5.1 |
+| STARTED Implement the database model using Northwind                        |         |       | 16:37 |  90.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -81,6 +82,27 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 - [[https://twitter.com/MarcoCraveiro/status/820962437465866241][Tweet]]
 
+*** COMPLETED Fix the handling of ODB pragmas for yarn primitives     :story:
+    CLOSED: [2017-02-25 Sat 21:53]
+    CLOCK: [2017-02-25 Sat 21:32]--[2017-02-25 Sat 21:52] =>  0:20
+    CLOCK: [2017-02-25 Sat 20:55]--[2017-02-25 Sat 21:31] =>  0:36
+
+If we are to support primitives with ODB, we should probably have a
+mechanism to automatically add the pragmas to the primitive:
+
+: #pragma db value(region_id) schema("northwind")
+: #pragma db member(region_id::value_) column("region_id")
+
+In addition we are not generating pragmas at all for primitives at
+present.
+
+Actually we should only add the member pragma if there is at least one
+value-level pragma.
+
+Final decision on this was to generate the pragma on the back of a
+schema pragma insertion and to inject the attribute automatically on
+the back of it.
+
 *** STARTED Implement the database model using Northwind              :story:
     CLOCK: [2017-02-25 Sat 19:47]--[2017-02-25 Sat 19:52] =>  0:05
     CLOCK: [2017-02-25 Sat 18:56]--[2017-02-25 Sat 19:46] =>  0:50
@@ -103,20 +125,6 @@ the base for the model.
 
 We should implement it using Oracle and use this to test the changes
 to ODB's oracle support.
-
-*** ODB and primitives                                                :story:
-
-If we are to support primitives with ODB, we should probably have a
-mechanism to automatically add the pragmas to the primitive:
-
-: #pragma db value(region_id) schema("northwind")
-: #pragma db member(region_id::value_) column("region_id")
-
-In addition we are not generating pragmas at all for primitives at
-present.
-
-Actually we should only add the member pragma if there is at least one
-value-level pragma.
 
 *** ODB Fixes to support Oracle                                       :story:
 
