--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,20 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-25 Sat 23:52]
+#+CAPTION: Clock summary at [2017-02-26 Sun 00:31]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *20:22* |       |       | 100.0 |
+| *Total time*                                                                | *20:58* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 20:22   |       |       | 100.0 |
-| Active                                                                      |         | 20:22 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   2.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   2.5 |
-| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   4.6 |
-| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   4.3 |
-| STARTED Implement the database model using Northwind                        |         |       | 16:37 |  81.6 |
-| STARTED ODB Fixes to support Oracle                                         |         |       |  1:02 |   5.1 |
+| Stories                                                                     | 20:58   |       |       | 100.0 |
+| Active                                                                      |         | 20:58 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   1.9 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   2.4 |
+| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   4.5 |
+| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   4.2 |
+| STARTED Injection: do not split out root annotation from intermediate model |         |       |  0:26 |   2.1 |
+| STARTED ODB Fixes to support Oracle                                         |         |       |  1:12 |   5.7 |
+| STARTED Implement the database model using Northwind                        |         |       | 16:37 |  79.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -117,30 +118,29 @@ two pipelines for two different stages of processing. Rename these two
 classes to reflect the pipelines, and split out the final model
 generation from the second stage.
 
-*** STARTED Implement the database model using Northwind              :story:
-    CLOCK: [2017-02-25 Sat 19:47]--[2017-02-25 Sat 19:52] =>  0:05
-    CLOCK: [2017-02-25 Sat 18:56]--[2017-02-25 Sat 19:46] =>  0:50
-    CLOCK: [2017-02-25 Sat 18:02]--[2017-02-25 Sat 18:56] =>  0:54
-    CLOCK: [2017-02-25 Sat 04:05]--[2017-02-25 Sat 05:54] =>  1:49
-    CLOCK: [2017-02-24 Fri 21:01]--[2017-02-24 Fri 22:55] =>  1:54
-    CLOCK: [2017-02-24 Fri 10:34]--[2017-02-24 Fri 12:39] =>  2:05
-    CLOCK: [2017-02-24 Fri 09:01]--[2017-02-24 Fri 10:33] =>  1:32
-    CLOCK: [2017-02-23 Thu 23:06]--[2017-02-23 Thu 23:39] =>  0:33
-    CLOCK: [2017-02-23 Thu 19:15]--[2017-02-23 Thu 23:05] =>  3:50
-    CLOCK: [2017-02-14 Tue 06:33]--[2017-02-14 Tue 07:30] =>  0:57
-    CLOCK: [2017-02-13 Mon 20:25]--[2017-02-13 Mon 22:33] =>  2:08
+*** COMPLETED Fix ODB targets                                         :story:
+    CLOSED: [2017-02-25 Sat 23:56]
 
-Now we are using Dogen in anger with ODB, we need to make sure the
-database model is actually exercising all of this functionality. One
-easy way of achieving this is to use Microsoft's Northwind Database as
-the base for the model.
+*Rationale*: Fixed as part of other codegen fixes.
 
-- [[https://northwinddatabase.codeplex.com/][Northwind Database]]
+At present the ODB targets make no sense:
 
-We should implement it using Oracle and use this to test the changes
-to ODB's oracle support.
+- we must manually create =codegen_northwind=
+- the name =codegen= is obscure - should just be "odb"
+
+*** STARTED Injection: do not split out root annotation from intermediate model :story:
+    CLOCK: [2017-02-26 Sun 00:05]--[2017-02-26 Sun 00:31] =>  0:26
+
+For some random reason we decided to supply both the intermediate
+model and the root annotation into the injectors, when they can
+themselves obtain it from the intermediate model. This just causes
+confusion because now it seems the API is telling us that the root
+annotation could come from somewhere else, when in fact it
+can't. Remove it from the API and force injectors to read it directly
+from the intermediate model.
 
 *** STARTED ODB Fixes to support Oracle                               :story:
+    CLOCK: [2017-02-25 Sat 23:54]--[2017-02-26 Sun 00:04] =>  0:10
     CLOCK: [2017-02-25 Sat 22:30]--[2017-02-25 Sat 22:57] =>  0:27
     CLOCK: [2017-02-25 Sat 21:54]--[2017-02-25 Sat 22:29] =>  0:35
 
@@ -187,6 +187,29 @@ modified   Src/XDatabase/src/options.odb
  # use the boost profile
 --profile boost
 #+end_example
+
+*** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-02-25 Sat 19:47]--[2017-02-25 Sat 19:52] =>  0:05
+    CLOCK: [2017-02-25 Sat 18:56]--[2017-02-25 Sat 19:46] =>  0:50
+    CLOCK: [2017-02-25 Sat 18:02]--[2017-02-25 Sat 18:56] =>  0:54
+    CLOCK: [2017-02-25 Sat 04:05]--[2017-02-25 Sat 05:54] =>  1:49
+    CLOCK: [2017-02-24 Fri 21:01]--[2017-02-24 Fri 22:55] =>  1:54
+    CLOCK: [2017-02-24 Fri 10:34]--[2017-02-24 Fri 12:39] =>  2:05
+    CLOCK: [2017-02-24 Fri 09:01]--[2017-02-24 Fri 10:33] =>  1:32
+    CLOCK: [2017-02-23 Thu 23:06]--[2017-02-23 Thu 23:39] =>  0:33
+    CLOCK: [2017-02-23 Thu 19:15]--[2017-02-23 Thu 23:05] =>  3:50
+    CLOCK: [2017-02-14 Tue 06:33]--[2017-02-14 Tue 07:30] =>  0:57
+    CLOCK: [2017-02-13 Mon 20:25]--[2017-02-13 Mon 22:33] =>  2:08
+
+Now we are using Dogen in anger with ODB, we need to make sure the
+database model is actually exercising all of this functionality. One
+easy way of achieving this is to use Microsoft's Northwind Database as
+the base for the model.
+
+- [[https://northwinddatabase.codeplex.com/][Northwind Database]]
+
+We should implement it using Oracle and use this to test the changes
+to ODB's oracle support.
 
 *** Add prefetch support to ODB                                       :story:
 
@@ -252,13 +275,6 @@ the pragmas, we will have duplicates, in effect:
 
 : #DOGEN odb_pragma=schema("northwind")
 : #DOGEN odb_pragma=schema("NORTHWIND")
-
-*** Fix ODB targets                                                   :story:
-
-At present the ODB targets make no sense:
-
-- we must manually create =codegen_northwind=
-- the name =codegen= is obscure - should just be "odb"
 
 *** Clean up odb implementation                                       :story:
 
