--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-26 Sun 00:31]
+#+CAPTION: Clock summary at [2017-02-26 Sun 00:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *20:58* |       |       | 100.0 |
+| *Total time*                                                                | *21:07* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 20:58   |       |       | 100.0 |
-| Active                                                                      |         | 20:58 |       | 100.0 |
+| Stories                                                                     | 21:07   |       |       | 100.0 |
+| Active                                                                      |         | 21:07 |       | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   1.9 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   2.4 |
-| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   4.5 |
+| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   4.4 |
 | COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   4.2 |
-| STARTED Injection: do not split out root annotation from intermediate model |         |       |  0:26 |   2.1 |
+| COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   2.8 |
 | STARTED ODB Fixes to support Oracle                                         |         |       |  1:12 |   5.7 |
-| STARTED Implement the database model using Northwind                        |         |       | 16:37 |  79.3 |
+| STARTED Implement the database model using Northwind                        |         |       | 16:37 |  78.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -128,7 +128,9 @@ At present the ODB targets make no sense:
 - we must manually create =codegen_northwind=
 - the name =codegen= is obscure - should just be "odb"
 
-*** STARTED Injection: do not split out root annotation from intermediate model :story:
+*** COMPLETED Injection splits annotation from intermediate model     :story:
+    CLOSED: [2017-02-26 Sun 00:41]
+    CLOCK: [2017-02-26 Sun 00:32]--[2017-02-26 Sun 00:41] =>  0:09
     CLOCK: [2017-02-26 Sun 00:05]--[2017-02-26 Sun 00:31] =>  0:26
 
 For some random reason we decided to supply both the intermediate
