--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-27 Mon 00:10]
+#+CAPTION: Clock summary at [2017-02-27 Mon 22:34]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *24:12* |       |       | 100.0 |
+| *Total time*                                                                | *25:35* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 24:12   |       |       | 100.0 |
-| Active                                                                      |         | 24:12 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   1.7 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   2.1 |
-| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   3.9 |
-| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   3.7 |
-| COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   2.4 |
-| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   9.2 |
-| STARTED Implement the database model using Northwind                        |         |       | 18:40 |  77.1 |
+| Stories                                                                     | 25:35   |       |       | 100.0 |
+| Active                                                                      |         | 25:35 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   1.6 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   2.0 |
+| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   3.6 |
+| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   3.5 |
+| COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   2.3 |
+| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   8.7 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:03 |  78.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -203,6 +203,8 @@ At present we hard-coded the ODB backend in the options file. However:
 - users must be able to set them.
 
 *** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-02-27 Mon 22:11]--[2017-02-27 Mon 22:34] =>  0:23
+    CLOCK: [2017-02-27 Mon 21:10]--[2017-02-27 Mon 22:10] =>  1:00
     CLOCK: [2017-02-26 Sun 23:22]--[2017-02-27 Mon 00:10] =>  0:48
     CLOCK: [2017-02-26 Sun 22:48]--[2017-02-26 Sun 23:21] =>  0:33
     CLOCK: [2017-02-26 Sun 22:05]--[2017-02-26 Sun 22:47] =>  0:42
@@ -232,6 +234,14 @@ Tasks:
 
 - add comment for ODB targets
 - add flag to mark a type as a value
+- case of the identifiers is a problem: sometimes we get them
+  uppercase (when we do them without quotes in sql plus) sometimes we
+  get them lowercase (from odb). use =--sql-name-case= upper/lower as
+  a flag.
+- schema initialisation from statics is not working; this is as
+  explained in [[http://www.codesynthesis.com/pipermail/odb-users/2013-May/001286.html][this email]]. We can force it by doing a query on that
+  entity, but that then causes an exception.
+- =head -n 200 northwind_ascii.sql | grep ^INSERT | cut -b 1-150 | uniq=
 
 *** Use =cxx= extension with ODB files                                :story:
 
