--- a/doc/agile/sprint_backlog_98.org
+++ b/doc/agile/sprint_backlog_98.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-02-27 Mon 22:34]
+#+CAPTION: Clock summary at [2017-02-28 Tue 07:26]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *25:35* |       |       | 100.0 |
+| *Total time*                                                                | *26:19* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 25:35   |       |       | 100.0 |
-| Active                                                                      |         | 25:35 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   1.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   2.0 |
-| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   3.6 |
-| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   3.5 |
-| COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   2.3 |
-| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   8.7 |
-| STARTED Implement the database model using Northwind                        |         |       | 20:03 |  78.4 |
+| Stories                                                                     | 26:19   |       |       | 100.0 |
+| Active                                                                      |         | 26:19 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:24 |   1.5 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.9 |
+| COMPLETED Fix the handling of ODB pragmas for yarn primitives               |         |       |  0:56 |   3.5 |
+| COMPLETED Rename intermediate model expander and model factory              |         |       |  0:53 |   3.4 |
+| COMPLETED Injection splits annotation from intermediate model               |         |       |  0:35 |   2.2 |
+| COMPLETED ODB Fixes to support Oracle                                       |         |       |  2:14 |   8.5 |
+| STARTED Implement the database model using Northwind                        |         |       | 20:47 |  79.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -203,6 +203,7 @@ At present we hard-coded the ODB backend in the options file. However:
 - users must be able to set them.
 
 *** STARTED Implement the database model using Northwind              :story:
+    CLOCK: [2017-02-28 Tue 06:41]--[2017-02-28 Tue 07:25] =>  0:44
     CLOCK: [2017-02-27 Mon 22:11]--[2017-02-27 Mon 22:34] =>  0:23
     CLOCK: [2017-02-27 Mon 21:10]--[2017-02-27 Mon 22:10] =>  1:00
     CLOCK: [2017-02-26 Sun 23:22]--[2017-02-27 Mon 00:10] =>  0:48
